fix(visual): tweak `<a>` style in markdown context
Remove the bottom dashed line (actually a border) on hover, so it won't look weird in dark mode or lead to a `1px` shift of the content below.
Now it is `px-1 py-0.5 -my-0.5` (originally `p-1 -m-1`), so that the hover background will not obscure the regular text next to it.

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -29,8 +29,9 @@
         &:hover, &:active {
             @apply decoration-transparent;
             background: var(--btn-plain-bg-hover);
-            border-bottom: 1px dashed var(--link-hover);
+            /* border-bottom: 1px dashed var(--link-hover); */
             text-decoration: none;
+            
         }
     }
 
